[emacs + misc] merge from linbox

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -50,11 +50,14 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# move focused window
-bindsym $mod+Ctrl+h move left
-bindsym $mod+Ctrl+j move down
-bindsym $mod+Ctrl+k move up
-bindsym $mod+Ctrl+l move right
+# bindsym Next focus right
+# bindsym Prior focus left
+
+# move focused window; 100 px is only relevant for floating windows
+bindsym $mod+Ctrl+h move left 100 px
+bindsym $mod+Ctrl+j move down 100 px
+bindsym $mod+Ctrl+k move up 100 px
+bindsym $mod+Ctrl+l move right 100 px
 
 # enter fullscreen mode for the focused container
 bindsym $mod+Shift+f fullscreen toggle
@@ -89,14 +92,17 @@ bindsym $mod+Ctrl+9 move container to workspace 9
 bindsym $mod+Ctrl+0 move container to workspace 10
 bindsym $mod+Ctrl+minus move container to workspace 11
 
+# Switch workspaces on outputs (left -> right & right -> left)
+bindsym $mod+Ctrl+grave mark current; focus output next; move workspace to output next; [con_mark="current"] focus; move workspace to output next; unmark
+
 # Workspace manipulation
 bindsym $mod+grave workspace back_and_forth
 bindsym $mod+comma focus output left
 bindsym $mod+period focus output right
 bindsym $mod+Ctrl+comma move workspace to output left
 bindsym $mod+Ctrl+period move workspace to output left
-bindsym $mod+Shift+comma workspace prev
-bindsym $mod+Shift+period workspace next
+bindsym $mod+Shift+comma workspace prev_on_output
+bindsym $mod+Shift+period workspace next_on_output
 
 # Layouts
 bindsym $mod+Escape layout toggle tabbed splitv splith
@@ -121,8 +127,8 @@ bindsym Shift+XF86AudioLowerVolume exec  "$HOME/.local/bin/change-volume -10%"
 bindsym XF86AudioLowerVolume exec  "$HOME/.local/bin/change-volume -5%"
 bindsym XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +5%"
 bindsym Shift+XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +10%"
-bindsym XF86AudioMute exec "$HOME/.local/bin/change-volume 0 &&"
-bindsym Shift+XF86AudioMute exec "$HOME/.local/bin/mic-toggle && pkill -SIGRTMIN+10 i3blocks"
+bindsym XF86AudioMute exec "$HOME/.local/bin/change-volume 0"
+bindsym Shift+XF86AudioMute exec "$HOME/.local/bin/toggle-mic && pkill -SIGRTMIN+10 i3blocks"
 bindsym $mod+v exec "$HOME/.local/bin/vpn toggle && pkill -SIGRTMIN+11 i3blocks"
 
 # Player
@@ -179,16 +185,48 @@ bindsym $mod+equal scratchpad show
 
 no_focus [window_role="pop_up"]
 
-# for_window [class="google-chrome"] layout tabbed
-for_window [window_role="browser"] layout tabbed
-for_window [class="Emacs"] layout tabbed
+# for_window directives
 
-for_window [class="Galculator"] floating enable
+for_window [window_role="browser"] layout tabbed
+for_window [window_role="Emacs"] layout tabbed
+
 for_window [class="Thunar"] floating enable
 for_window [class="genp"] floating enable
 for_window [class="pentablet"] floating enable
 for_window [class="Pavucontrol"] floating enable
 for_window [title=".*QEMU/KVM"] floating enable
+for_window [class="anki"] floating enable
+for_window [class="Emulator"] floating enable
+
+# for_window [class=".*_floating"] floating enable
+for_window [class="Alacritty_floating|Galculator"] floating enable
+for_window [class="Alacritty_floating|Galculator"] move container to output next
+for_window [class="Alacritty_floating|Galculator"] sticky enable
+
+bindsym $mod+Ctrl+Escape mode "no_bindings"
+mode "no_bindings" {
+    # back to normal: Ctrl+Escape
+    bindsym Ctrl+Escape mode "default"
+}
+
+# Not required, just kept for the purpose of example
+# bindsym $mod+p mode "move_float" focus floating
+mode "move_float" {
+    bindsym Left  move left 100 px
+    bindsym Down  move down 100 px
+    bindsym Up    move up 100 px
+    bindsym Right move right 100 px
+
+    bindsym h     move left 100 px
+    bindsym j     move down 100 px
+    bindsym k     move up 100 px
+    bindsym l     move right 100 px
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+    bindsym p mode "default"
+}
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
